# tempo-ql

./: .gitignore  LocalDatabase.py  MANIFEST.in  README.md  SQL_prompt.txt  demo.ipynb  demo_LLM.ipynb  demo_ai_queries.ipynb  demo_generic.ipynb  demo_mimiciv_full.ipynb  demo_omop.ipynb  example_widget.ipynb  pyproject.toml  requirements.txt  test.ipynb
MEDS/: MEDSDataExtractor.py
OMOPQueryEngine/: OMOPQueryEngine.py  test.py
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.svelte  StandaloneApp.svelte  app.css  standalone.ts
client/src/components/: BarCard.svelte  (+26 more)
examples/sepsis/: README.md  explore_results.ipynb  extract_data.ipynb
performance_eval/: LLM_eval.py  analyze_LLM_performance.ipynb  analyze_results.ipynb  performance_eval.py  queries.py
performance_eval/LLM_eval/: analyze_LLM_performance.ipynb
performance_eval/time_eval/: analyze_time_results.ipynb
query_language/: data_types.py  evaluator.py  filesystem.py  time_series_analyzer.py  time_series_anaylzer_demo.ipynb
query_language/omop/: dataset.py  test.py
query_language/tempo_csv/: dataset.py
tempo_ql/: SQL_prompt.txt  __init__.py  ai_assistant.py  data_types.py  evaluator.py  filesystem.py  prompt.txt  scope_analyzer.py  service.py  test.ipynb  tt.ipynb  utils.py  widget.py
tempo_ql/generic/: __init__.py  dataset.py  formats.py  variable_store.py
tempo_ql/meds/: dataset.py
tempo_ql/omop/: __init__.py  dataset.py
tempo_ql/static/: style.css  widget-main.js
tempo_ql/tempo_csv/: __init__.py  test.py
time_series/: time_series_analyzer.py
(+25 files in other folders)
