[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tempo-ql"
authors = [
    {name = "Venkatesh Sivaraman", email = "venkats@cmu.edu"},
]
description = "Toolkit and interactive widget for querying time-series healthcare data"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["AI", "machine learning", "notebook", "jupyter", "data science"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numba>=0.59.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.2",
    "tqdm>=4.66.1",
    "lark>=1.1.8",
    "pyarrow>=13.0.0",
    "ipywidgets",
    "anywidget",
    "divisi-toolkit"
]
version = "0.1.0"

[project.urls]
Homepage = "https://github.com/venkatesh-sivaraman/tempo-ql"

[tool.setuptools]
packages = ["tempo_ql"]